# ccplan

./: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  DESIGN.md  README.md  SECURITY.md  build.rs  codecov.yml  deny.toml  release-plz.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  release-plz.yml  release.yml
cockpit/: README.md  preview.html
cockpit/src-tauri/: Cargo.toml  tauri.conf.json
cockpit/src-tauri/capabilities/: default.json
cockpit/src-tauri/icons/: icon.icns
cockpit/src-tauri/src/: main.rs
development/: audit_log.md  backlog.md  implementation_checklist.md  notes.md
scripts/: build-release-assets.sh  find_missed_lines.py
skills/ccplan/: SKILL.md
src/: cli.rs  cli_command.rs  commands.rs  config.rs  context.rs  error.rs  lib.rs  lifecycle.rs  main.rs  mcp.rs  model.rs  recurrence.rs  serve.rs  store.rs  time.rs
src/gui/: mod.rs  model.rs  view.rs
src/platform/: format.rs  launchd.rs  mod.rs  notify.rs  schtasks.rs  systemd.rs  unsupported.rs
tests/: agent_docs.rs  apply_properties.rs  cli.rs  commands.rs  integration_linux.rs  lifecycle.rs  lifecycle_properties.rs  model.rs  properties.proptest-regressions  properties.rs  release_docs.rs  store.rs  store_properties.rs  time.rs
wix/: main.wxs
